--- a/Css/index.html
+++ b/Css/index.html
@@ -12,13 +12,18 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="mobile-style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 
 <body>
     <header>
+        
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#" id="animate2">
                   <i class="fas fa-book-reader fa-3x mx-3"></i> 
                     Books
                 </a>
@@ -28,7 +33,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav" id="animate1">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
@@ -57,9 +62,9 @@
                 </div>
             </nav>
         </div>
-        <div class="container text-center">
+        <div class="container text-center" id="animate3">
             <div class="row">
-                <div class="col-md-7 col-sm-12">
+                <div class="col-md-7 col-sm-12" >
                     <h6>AUTHOR: DAILY TUTION</h6>
                     <h1>EXCITING ADVENTURE</h1>
                     <p>
@@ -68,7 +73,7 @@
                     </p>
                     <button class="btn btn-light px-5 py-2">Buy now for $5.99</button>
                 </div>
-                <div class="col-md-5 col-sm-12 h-25">
+                <div class="col-md-5 col-sm-12 h-25" >
                     <img src="img/header-img.png" alt="Books">
                 </div>
             </div>
