--- a/Css/index.html
+++ b/Css/index.html
@@ -15,12 +15,16 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="jq-fakeloader/dist/fakeLoader.min.css">
 
 </head>
 
 <body>
     <header>
         
+        <div class="fakeLoader"></div>
+
+
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#" id="animate2">
@@ -382,6 +386,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
+
+<script src="jq-fakeloader/dist/fakeLoader.min.js"></script>
 <script src="main.js"></script>
 </body>
 
