remove toggler outline

--- a/Css/index.html
+++ b/Css/index.html
@@ -16,6 +16,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="jq-fakeloader/dist/fakeLoader.min.css">
+    <link href="hover-min.css" rel="stylesheet">
+
 
 </head>
 
@@ -36,13 +38,13 @@
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav" id="animate1">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link hvr-pulse-grow" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Course</a>
+                            <a class="nav-link hvr-wobble-top" href="#">Course</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Price</a>
+                            <a class="nav-link hvr-buzz-out" href="#">Price</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
@@ -54,10 +56,10 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Fact</a>
+                            <a class="nav-link hvr-wobble-skew" href="#">Fact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link hvr-grow-rotate" href="#">About</a>
                         </li>
                     </ul>
                 </div>
@@ -66,14 +68,14 @@
 
         <div class="container text-center animate__animated animate__zoomIn wow" id="animate3" data-wow-delay="0.5s">
             <div class="row">
-                <div class="col-md-7 col-sm-12" >
+                <div class="col-md-7 col-sm-12 " >
                     <h6>AUTHOR: DAILY TUTION</h6>
                     <h1>EXCITING ADVENTURE</h1>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit et blanditiis corporis impedit
                         cumque natus ad magnam?
                     </p>
-                    <button class="btn btn-light px-5 py-2">Buy now for $5.99</button>
+                    <button class="btn btn-light px-5 py-2 ">Buy now for $5.99</button>
                 </div>
                 <div class="col-md-5 col-sm-12 h-25" >
                     <img src="img/header-img.png" alt="Books">
