--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand justify-content-center">
                 <div class="" id="navbarNav">
                   <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
@@ -43,7 +43,7 @@
         
         <div class="container-fluid ">
             <div class="row mx-2">
-                <div class="col-lg-6 col-md-12 home-2 text-center">
+                <div class="col-lg-6 col-md-12 text-center home-2 ">
                     <div class="profile">
                         <img src="img/profile.jpg" alt="">
                     </div>
