--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12 text-left">
                     <h5 class="skill-text">JavaScript</h3>
-                    <div class="pb-4"><span class="bar-3">
+                    <div class="pb-4"><span class="bar-3 ">
                         <p class="percentage">65%</p>
                     </span></div>
 
@@ -126,5 +126,6 @@
     <script>
     new WOW().init();
     </script>
+    <script src="app.js"></script>
 </body>
 </html>
