day-night toggler

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,14 @@
                     </li>
                   </ul>
                 </div>
-               
+                <div class="float-right">
+                    <input type="checkbox" name="" id="checkbox" class="checkbox">
+                    <label for="checkbox" class="label">
+                        <i class="fas fa-sun"></i>
+                        <i class="fas fa-moon"></i>
+                        <div class="ball"></div>
+                    </label>
+                </div>
               </nav>
         </div>
         <!-- Navbar-ends -->
