--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -92,7 +92,7 @@
                         <span class="a">!</span>
                         
                     </p>
-                    <span class="coding">&lt;h1&gt;</span>
+                    <span class="coding white">&lt;h1&gt;</span>
                     <p class="job">
                         
                         <span class="a">I</span>
@@ -112,7 +112,7 @@
                         <span class="a">e</span>
                         <span class="a">r</span>
                     </p>
-                    <span class="coding">&lt;/h1&gt;</span>
+                    <span class="coding white">&lt;/h1&gt;</span>
                     <p class="design pt-2">Web and Graphic Design</p>
                     <button class=" btn-cv">Contact me</button>
                     <div class="icons">
