--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tic Tac Toe</title>
         <link rel="stylesheet" href="styles.css" />
+        <link href="./tic.png" rel="icon" />
         <script src="script.js" defer></script>
     </head>
 
@@ -20,6 +21,7 @@
             <div class="cell" data-cell></div>
             <div class="cell" data-cell></div>
         </div>
+        <div class="undo">double click to undo...!</div>
         <div class="choice" id="choice">
             <button id="xButton">X</button>
             <button id="oButton">O</button>
